Fix horizontal overflow caused by background images

--- a/src/main/resources/META-INF/resources/data/main.css
+++ b/src/main/resources/META-INF/resources/data/main.css
@@ -4,6 +4,7 @@ body {
     background-position: 0px 0px;
     background-size: 200px 200px;
     background-image: url("/data/noise.png");
+    overflow-x: hidden;
 }
 
 #page-content-wrapper {
